tdf#144769 Properly encode file name in error dialog

Change-Id: Ie8f0b57c33fff787735b09ecf8308f86b56d8bb4